# docpilot

./: .gitignore  Makefile  README.md  podman-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  logging.py  metrics.py
backend/app/models/: schemas.py
backend/app/services/: bm25_index.py  embedder.py  hybrid_retriever.py  ingestion.py  reranker.py  retrieval.py  vector_store.py
backend/tests/: test_retrieval.py
evaluation/: golden_dataset.json
frontend/: Dockerfile  app.py  pyproject.toml
infra/grafana/provisioning/dashboards/: dashboard.yml  docpilot.json
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: prometheus.yml
notebooks/: 00_colab_setup.ipynb  02_embeddings.ipynb
storage/: raft_state.json
storage/collections/docpilot/0/: newest_clocks.json  replica_state.json
storage/collections/docpilot/0/segments/b93190a7-9b5e-4016-9e3a-08238a6a91da/: mutable_id_tracker.mappings  mutable_id_tracker.versions
storage/collections/docpilot/0/segments/de137d70-9868-46dc-99a6-8277800f8ad2/: mutable_id_tracker.mappings  mutable_id_tracker.versions
