[project]
name = "docpilot-backend"
version = "0.1.0"
description = "Production RAG backend — docpilot"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",

    # RAG core
    "llama-index==0.11.23",
    "llama-index-embeddings-huggingface==0.3.1",

    # Embedding model — local, no API key needed
    "sentence-transformers==3.3.1",

    # Vector store
    "qdrant-client==1.12.1",

    # Document parsing
    "pypdf==5.1.0",

    # Settings + validation
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",

    # HTTP client
    "httpx==0.28.0",

    # Observability
    "structlog==24.4.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "prometheus-client==0.21.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]